# Prompt-Boost

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CORREÇÕES_INCONSISTÊNCIAS_RELATÓRIO.md  DOCUMENTATION_SUMMARY.md  FASE4_COMPLETION_SUMMARY.md  LOCAL_TESTING_REPORT.md  LOCAL_TESTING_SUMMARY.md  README.md  README.pt.md  docker-compose.yml
backend/: .env.example  DEPLOYMENT.md  Dockerfile  MONITORING.md  QUICK_START.md  README.md  alembic.ini  database.py  docker-compose.yml  main.py  providers.py  pyproject.toml  recursion.py  requirements.txt  test_main.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/docs/: 00-ARQUITETURA-BACKEND.md  01-ENGINES-IMPLEMENTACAO.md  02-SELF-REFINE-ENGINE.md  03-TOT-GOT-ENGINES.md  04-MCTS-ENGINE.md  05-DEBATE-ENGINE.md  06-ALIGNMENT-ENGINE.md  07-AUTOFORMAL-ENGINE.md  08-PROVIDERS-E-LLMS.md  09-DATABASE-SCHEMA.md  10-WEBSOCKET-PROTOCOL.md  11-PERFORMANCE-MONITORING.md  12-DEPLOYMENT.md  13-API-REFERENCE.md  14-TESTING-STRATEGY.md  15-GUIA-IMPLEMENTACAO.md  16-CASOS-DE-USO-BACKEND.md  INDEX.md
backend/k8s/: configmap.yaml  deployment.yaml  grafana-dashboard.yaml  ingress.yaml  prometheus-config.yaml  prometheus-rules.yaml  rbac.yaml  secrets.yaml
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  compatibility.py  recursion.py  websocket.py
backend/src/engines/: __init__.py  alignment.py  autoformal.py  base.py  graph_of_thoughts.py  mcts.py  multi_agent_debate.py  self_refine.py  tree_of_thoughts.py
backend/src/models/: __init__.py  base.py  database.py  iteration.py  session.py  user.py
backend/src/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  provider_manager.py
backend/src/schemas/: recursion.py
backend/src/services/: recursion_router.py
backend/src/utils/: __init__.py  logger.py
backend/tests/e2e/: test_e2e.py
backend/tests/integration/: test_integration.py
backend/tests/unit/: test_engines.py
docs/: 00-INDICE.md  01-FUNDAMENTOS-RECURSIVOS.md  02-COMPARACAO-TECNICAS.md  03-TOT-E-GOT.md  04-SELF-REFINE-E-REFLEXION.md  05-RECURSIVE-ALIGNMENT.md  06-LLM-MCTS.md  07-MULTI-AGENT-DEBATE.md  08-AUTOFORMALIZAÇÃO.md  09-IMPLEMENTACAO-PRATICA.md  10-METRICAS-E-BENCHMARKS.md  (+2 more)
(+28 files in other folders)
